swagger docs updated with basic auth
